# SpaceApp

backend_django/: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend_django/application/: .coverage
backend_django/application/app/: celery.py  settings.py  tests.py  urls.py
backend_django/application/templates/notifications/: activate_user.html
backend_django/application/user/: admin.py  models.py  schema.py  serializers.py  tasks.py  tests.py  tokens.py  urls.py  validators.py  views.py
backend_django/application/user/migrations/: 0001_initial.py  0002_email.py
