[tool.poetry]
name = "backend-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
